# cc-task-python-layer

./: .gitignore  CHANGELOG.md  README.md  build.sh  pyproject.toml
.github/workflows/: python_dependency_layer.yaml
