[project]
name = "python-layer"
version = "1.1.0"
description = "Combined Python dependencies for AWS Lambda layer."
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
  "click>=8.4.1",
  "cumulus-api",
  "cumulus-message-adapter==2.0.5",
  "cumulus-message-adapter-python>=2.4.0",
  "h5py>=3.16.0",
  "lxml>=6.1.1",
  "requests>=2.34.2",
  "typing-extensions>=4.15.0",
]

[tool.uv.sources]
cumulus-api = { git = "https://github.com/nasa/Cumulus-API-Python", tag = "v3.2.1" }

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-check>=2.8.0",
  "pytest-mock>=3.15.1",
  "requests-pkcs12>=1.27",
]
